--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.5.3-beta</version>
+        </dependency>
+    </dependencies>
+
     <groupId>portScanner</groupId>
     <artifactId>lossp</artifactId>
     <version>1.0-SNAPSHOT</version>
