--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>1.7.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.3.6</version>
+        </dependency>
+
     </dependencies>
 
     <groupId>portScanner</groupId>
