--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
     <build>
         <plugins>
             <plugin>
@@ -16,6 +17,11 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>server</module>
+        <module>register</module>
+        <module>consumer</module>
+    </modules>
 
     <dependencies>
         <dependency>
