--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>server</module>
         <module>register</module>
         <module>consumer</module>
+        <module>common</module>
     </modules>
 
     <dependencies>
