--refactor 调整maven项目中子项目之间相互调用问题，同时增加protobuf包，准备引入protobuf处理请求

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,10 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>lossp</artifactId>
-        <groupId>portScanner</groupId>
+        <groupId>handwrite-rpc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>handwrite-rpc</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <artifactId>server</artifactId>
 
