--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>4.0.0.Final</version>
@@ -77,7 +89,7 @@
 
     </dependencies>
 
-    <groupId>portScanner</groupId>
+    <groupId>handwrite-rpc</groupId>
     <artifactId>lossp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
