--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>lossp</artifactId>
-        <groupId>handwrite-rpc</groupId>
+        <groupId>com.handwrite-rpc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>handwrite-rpc</groupId>
+            <groupId>com.handwrite-rpc</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
