--refactor 定义interface提供给客户端调用，并且调整common, consumer, server三个模块的依赖关系

--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -9,6 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.handwrite-rpc</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <artifactId>consumer</artifactId>
 
 
